# dig

./: .gitignore  README.md  pyproject.toml  scrapy.cfg  setup.py  setup.sh
config/: allsharktankproducts.yaml
dig_conf/: config.py
dig_engine/: extract_engine.py  items.py  middlewares.py  pipelines.py  settings.py  store.py
dig_engine/spiders/: website.py
src/dig_spider/: chrome_plugin.crx  chrome_plugin.pem  cmdline.py  middlewares.py  running.py  scrapy.cfg  settings.py
src/dig_spider.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dig_spider/chrome_plugin/: manage.html  manifest.json  service-worker.js  sidepanel.html
src/dig_spider/chrome_plugin/css/: content.css  manage.css  sidepanel.css
src/dig_spider/chrome_plugin/js/: content-script.js  manage.js  pe-config.js  sidepanel.js
src/dig_spider/engine/: config.py  extract.py
src/dig_spider/example/: run_dig_spider.py  run_spider.py
src/dig_spider/example/config/: css_example.yaml  json.py  json_example.yaml  re_example.yaml  xpath_example.yaml
src/dig_spider/examples/: run_dig_spider.py
src/dig_spider/examples/config/: css_example.yaml  github.yaml  json.py  json_example.yaml  re_example.yaml  xpath_example.yaml
src/dig_spider/spiders/: website.py
src/dig_spider/template/: code_template.py  config_template.yaml  run_dig_spider.sh
test/: test.py  test_dig_spider.py
